# ScientificComputing-set1

./: README.md  environment.yml  pyproject.toml  run_analysis.sh  test.py  to_do.txt
scripts/: Visualize_Laplace.py  Visualize_time_dep_diff.py  add_object_SOR.py  calculate_laplace.py  calculate_time_dep_diff.py  calculate_vibrating_string.py  heatmap_objects.py  issues_graph.txt  objects_omega.py  run_vibrating_string.py  visualize_Laplace.py  visualize_heatmap_insulation.py  visualize_heatmap_objects.py  visualize_objects.py  visualize_time_dep_diff.py  visualize_vibrating_string.py
src/scientific_computing/: add_object_SOR.py  laplace.py  time_dep_diff.py  vibrating_string.py
tests/: test.py
